--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@
     top: 45vh;
     left: 45vw;
   }
-
   .quizContainer {
     position: absolute;
     top: 45vh;
@@ -206,3 +205,94 @@
     border-color: red;
     background-color: lightcoral;
   }
+  footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0px 30px 0px 30px;
+    height: 80px;
+    width: auto;
+  }
+  footer .totalQuestions span {
+    display: flex;
+    user-select: none;
+  }
+  footer .totalQuestions span p {
+    font-weight: bold;
+    margin: 0px 6px 0px 6px;
+  }
+  footer button {
+    height: 50px;
+    width: auto;
+    padding: 5px 15px 5px 15px;
+    color: white;
+    border: solid black 1px;
+    border-radius: 10px;
+    font-size: 20px;
+    background-color: #004085;
+    border: solid black 1px;
+    opacity: 0;
+    cursor: pointer;
+  }
+  footer button:hover {
+    background-color: rgb(0, 136, 255);
+  }
+  footer button.show {
+    pointer-events: auto;
+    opacity: 1;
+  }
+  .resultContainer {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    background-color: white;
+    border-radius: 10px;
+    padding: 30px;
+    height: 200px;
+    width: 400px;
+    top: 25vh;
+    left: 35vw;
+    opacity: 0;
+    pointer-events: none;
+  }
+  .congrats {
+    font-size: 24px;
+    font-weight: bold;
+  }
+  .scoreContainer span {
+    display: flex;
+    font-size: 20px;
+    margin: 8px 0px 8px 0px;
+  }
+  .scoreContainer span p {
+    padding: 0px 5px 0px 5px;
+    font-weight: bold;
+  }
+  .resultContainer .workingBtn {
+    display: flex;
+    margin: 20px 0;
+  }
+  .resultContainer .workingBtn button {
+    margin: 3px 10px 3px 10px;
+    height: 50px;
+    font-size: 16px;
+    border: solid black 1px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  .workingBtn button.restartBtn {
+    color: white;
+    background-color: #004085;
+  }
+  .workingBtn button.restartBtn:hover {
+    background-color: rgb(0, 136, 255);
+  }
+  .workingBtn button.quitBtn {
+    color: white;
+    background-color: #004085;
+  }
+  .workingBtn button.quitBtn:hover {
+    background-color: rgb(0, 136, 255);
+  }
+  
